# brokeback_mountain_alleycat

./: .dockerignore  .gitignore  README.md  admin_panel.Dockerfile  docker-compose.yml  pyproject.toml  tg_bot.Dockerfile
admin_panel/bot_settings/: admin.py  models.py  serializers.py  services.py
admin_panel/bot_settings/migrations/: 0001_initial.py  0003_custommessage.py  0004_create_admin.py
admin_panel/core/: asgi.py  routers.py  settings.py
admin_panel/geo_points/: contstans.py  models.py  viewsets.py
admin_panel/participants/: apps.py  constants.py  serializers.py  viewsets.py
admin_panel/race/: apps.py  models.py
brokeback_moutain_admin_panel/bot_settings/: admin.py  apps.py  keyboards.py  models.py  services.py  viewsets.py
brokeback_moutain_admin_panel/core/: routers.py  settings.py  urls.py  wsgi.py
brokeback_moutain_admin_panel/geo_points/: admin.py  apps.py  contstans.py  models.py  serializers.py  viewsets.py
brokeback_moutain_admin_panel/participants/: admin.py  apps.py  constants.py  models.py  serializers.py
brokeback_moutain_admin_panel/race/: admin.py  apps.py  models.py  serializers.py  viewsets.py
tg_bot/: constants.py  main.py
tg_bot/api_requests/: bot_settings.py  geo_points.py  race_requests.py  registration.py  text_messages.py
tg_bot/config/: settings.py  utils.py
tg_bot/handlers/: __init__.py  admins_info.py  race.py  registration.py
tg_bot/keyboards/: geo_points.py  registration.py
tg_bot/services/: race_services.py
tg_bot/states/: race_states.py  registration_states.py
(+15 files in other folders)
